...

@Composable
private fun HomeScreen() {
    // Load plasma shader code
    val shaderCode = """
        uniform float2 iResolution;
        uniform float iTime;
        
        half4 main(float2 fragCoord) {
            float2 uv = fragCoord / iResolution;
            
            float t = iTime * 0.5;
            
...
